# photo-mosiac

./: .gitignore  PhotoMosaicGoals.txt  README.md  pyproject.toml
src/photo_mosaic/: __init__.py  cache.py  cli.py  config.py  gui.py
src/photo_mosaic/core/: image_utils.py  mosaic.py  strategies.py  tile_index.py
tests/: test_cli_smoke.py
